Add change to navbar logo url.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <nav class="navbar navbar--phone__screen navbar--tablet__screen navbar--laptop__screen navbar--desktop__screen">
             <!-- logo -->
             <a href="./" class="navbar__logo_container">
-                <img class="navbar__logo" src="/Materiale/rooster-logo.png" alt="Rooster Logo">
+                <img class="navbar__logo" src="./Materiale/rooster-logo.png" alt="Rooster Logo">
             </a>
             <!-- links -->
             <ul class="navbar__list__container">
