Add google fonts to texts and titles.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <!-- js -->
     <script src="./components/navbar.js" defer></script>
@@ -89,7 +93,7 @@
                 <p class="contentSection__text">The idea of "form follows function," a prnciple associated with the
                     modernist design movement, was the starting place for our Voda collection. Its classic geometry and
                     clean finishes unite into an industrial modern style, crafted for Australian living</p>
-                <a style="text-decoration: none;" href="#" class="navbar__button_booking">kontakt os</a>
+                <a style="text-decoration: none;" href="#" class="hero__button">kontakt os</a>
             </div>
         </section>
 
@@ -194,8 +198,8 @@
             <li class="footer__list">
                 <span class="footer__links_title">Information</span>
                 <a href="#">Om Rooster</a>
-                <a href="#">kataloger & film</a>
-                <a href="#">Kudne guide</a>
+                <a href="#">Kataloger & film</a>
+                <a href="#">Kunde guide</a>
                 <a href="#">Opskrifter</a>
                 <a href="#">Presse</a>
                 <a href="#">Karrier</a>
