Add visible social media icons to the fooder.

--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@
 
                     <div class="icons_container">
                         <div class="socialMedia__icon_container"><img class="socialMedia__icon"
-                                src="/Materiale/facebook-ikon-hvid.png" alt="Facebook"></div>
+                                src="./Materiale/facebook-ikon-hvid.png" alt="Facebook"></div>
                         <div class="socialMedia__icon_container"><img class="socialMedia__icon"
-                                src="/Materiale/instagram-ikon-hvid.png" alt="Instagram"></div>
+                                src="./Materiale/instagram-ikon-hvid.png" alt="Instagram"></div>
                         <div class="socialMedia__icon_container"><img class="socialMedia__icon"
-                                src="/Materiale/pinterest-ikon-hvid.png" alt="Pinterest"></div>
+                                src="./Materiale/pinterest-ikon-hvid.png" alt="Pinterest"></div>
                         <div class="socialMedia__icon_container"><img class="socialMedia__icon"
-                                src="/Materiale/linkedin-ikon-hvid.png" alt="LinkedIn"></div>
+                                src="./Materiale/linkedin-ikon-hvid.png" alt="LinkedIn"></div>
                     </div>
                 </div>
             </li>
