--- a/index.html
+++ b/index.html
@@ -182,14 +182,14 @@
                     </table>
 
                     <div class="icons_container">
-                        <div class="socialMedia__icon_container"><img class="socialMedia__icon"
-                                src="./Materiale/facebook-ikon-hvid.png" alt="Facebook"></div>
-                        <div class="socialMedia__icon_container"><img class="socialMedia__icon"
-                                src="./Materiale/instagram-ikon-hvid.png" alt="Instagram"></div>
-                        <div class="socialMedia__icon_container"><img class="socialMedia__icon"
-                                src="./Materiale/pinterest-ikon-hvid.png" alt="Pinterest"></div>
-                        <div class="socialMedia__icon_container"><img class="socialMedia__icon"
-                                src="./Materiale/linkedin-ikon-hvid.png" alt="LinkedIn"></div>
+                        <a href="#" class="socialMedia__icon_container"><img class="socialMedia__icon"
+                                src="./Materiale/facebook-ikon-hvid.png" alt="Facebook"></a>
+                        <a href="#" class="socialMedia__icon_container"><img class="socialMedia__icon"
+                                src="./Materiale/instagram-ikon-hvid.png" alt="Instagram"></a>
+                        <a href="#" class="socialMedia__icon_container"><img class="socialMedia__icon"
+                                src="./Materiale/pinterest-ikon-hvid.png" alt="Pinterest"></a>
+                        <a href="#" class="socialMedia__icon_container"><img class="socialMedia__icon"
+                                src="./Materiale/linkedin-ikon-hvid.png" alt="LinkedIn"></a>
                     </div>
                 </div>
             </li>
